[package]
name = "rabe-js"
version = "0.1.0"
description = "javascript rabe wrapper"
authors = ["PPL"]
license = "ISC"
edition = "2018"
exclude = ["rabe.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.10.1"
deflate = "0.9.0"
inflate = "0.4.5"
blake2-rfc = "0.2.17"
clap = "2.33.3"
rand = "0.7.3"
serde = "1.0.118"
serde_json = "1.0.60"
serde_cbor = "0.11.1"
serde_derive = "1.0.118"
pest = "2.0"
pest_derive = "2.0"
rabe = { path = "./rabe" }

[dependencies.neon]
version = "0.9"
default-features = false
features = ["napi-4"]
